--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    			
    			<div class="row">
     			<div class="col-sm" id="tagline">
-    			     Tech Summit 2018 - Uptick	
+    			     Uptick	
     			</div>
     			<!-- tagline -->
     		</div>
